tests/fixtures/invalid/pow_list_float_float.py
# Cannot call pow() with List[int], Float, Float
x = pow([1, 2, 3], 1.0, 1.0)
